// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extended-table Column Spanning 1`] = `
"<table><thead><tr><th>H1</th>
<th>H2</th>
<th>H3</th>
</tr></thead><tbody><tr><td colspan=3>This cell spans 3 columns</td>
</tr></tbody></table>"
`;

exports[`extended-table Drops empty TRs in multiple tbody Mode 1`] = `
"<table><thead><tr><th align=left>Race</th>
<th align=left>Multi-class options</th>
</tr></thead><tbody><tr><td align=left>Dwarf</td>
<td align=left>fighter/cleric, fighter/thief</td>
</tr></tbody><tbody><tr><td rowspan=2 align=left>Elf </td>
<td rowspan=2 align=left>fighter/mage, fighter/thief, mage/thief, fighter/mage/thief                                         </td>
</tr></tbody><tbody><tr><td rowspan=2 align=left>Gnome </td>
<td rowspan=2 align=left>fighter/thief, fighter/cleric, fighter/illusionist, thief/cleric, thief/illusionist, cleric/illusionist        </td>
</tr></tbody><tbody><tr><td rowspan=3 align=left>Half-elf  </td>
<td rowspan=3 align=left>fighter/priest, fighter/mage, fighter/thief, ranger/priest, mage/priest, mage/thief,                                    fighter/mage/priest, fighter/mage/thief                    </td>
</tr></tbody><tbody><tr><td align=left>Halfling</td>
<td align=left>fighter/thief</td>
</tr></tbody><tbody><tr><td align=left>Human</td>
<td align=left>none</td>
</tr></tbody></table>"
`;

exports[`extended-table Leave empty TRs in single tbody Mode 1`] = `
"<table><thead><tr><th align=left>Race</th>
<th align=left>Multi-class options</th>
</tr></thead><tbody><tr><td align=left>Dwarf</td>
<td align=left>fighter/cleric, fighter/thief</td>
</tr><tr><td rowspan=2 align=left>Elf </td>
<td rowspan=2 align=left>fighter/mage, fighter/thief, mage/thief, fighter/mage/thief                                         </td>
</tr><tr></tr><tr><td rowspan=2 align=left>Gnome </td>
<td rowspan=2 align=left>fighter/thief, fighter/cleric, fighter/illusionist, thief/cleric, thief/illusionist, cleric/illusionist        </td>
</tr><tr></tr><tr><td rowspan=3 align=left>Half-elf  </td>
<td rowspan=3 align=left>fighter/priest, fighter/mage, fighter/thief, ranger/priest, mage/priest, mage/thief,                                    fighter/mage/priest, fighter/mage/thief                    </td>
</tr><tr></tr><tr></tr><tr><td align=left>Halfling</td>
<td align=left>fighter/thief</td>
</tr><tr><td align=left>Human</td>
<td align=left>none</td>
</tr></tbody></table>"
`;

exports[`extended-table Multi-row headers 1`] = `
"<table><thead><tr><th colspan=2 rowspan=2>This header spans two columns <em>and</em> two rows </th>
<th>Header A</th>
</tr><tr><th>Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
<td>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Row Spanning 1`] = `
"<table><thead><tr><th>H1</th>
<th>H2</th>
</tr></thead><tbody><tr><td rowspan=3>This cell spans three  rows        </td>
<td>Cell A</td>
</tr><tr><td>Cell B</td>
</tr><tr><td>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Stops at custom multiline terminators 1`] = `
"<table><thead><tr><th>Header A</th>
<th>Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
</tr></tbody></table><p>aaaa
bbbb
cccc</p>
"
`;

exports[`extended-table Stops at custom terminators 1`] = `
"<table><thead><tr><th>Header A</th>
<th>Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
</tr></tbody></table><p>aaaa</p>
"
`;

exports[`extended-table Works with combined widths and alignment 1`] = `
"<table><thead><tr><th align=left width=10%>Header A</th>
<th align=center width=20%>Header B</th>
<th align=right width=50%>Header C</th>
</tr></thead><tbody><tr><td align=left width=10%>Cell A</td>
<td align=center width=20%>Cell B</td>
<td align=right width=50%>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with minimal delimiter rows 1`] = `
"<table><thead><tr><th>Header A</th>
<th align=left>Header B</th>
<th align=right>Header C</th>
<th align=center>Header D</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td align=left>Cell B</td>
<td align=right>Cell C</td>
<td align=center>Cell D</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with mix of widths and not 1`] = `
"<table><thead><tr><th width=10%>Header A</th>
<th>Header B</th>
<th width=50%>Header C</th>
</tr></thead><tbody><tr><td width=10%>Cell A</td>
<td>Cell B</td>
<td width=50%>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with percentage widths 1`] = `
"<table><thead><tr><th width=10%>Header A</th>
</tr></thead><tbody><tr><td width=10%>Cell A</td>
</tr></tbody></table>"
`;
